# boycott_app_rs

./: Cargo.toml
src/: main.rs
src/db/: crud.rs
src/handlers/: brands_handlers.rs  mod.rs  query_handlers.rs
src/models/: brand.rs
src/scrapers/: boycott_thewitness.rs  boycotzionism.rs  ethical_consumer.rs  mod.rs  thewitness_apis.rs
src/telegram/: #bot.rs#  \  bot.rs
