[package]
name = "boycott_app_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-std = "1.12.0"
chromiumoxide = "0.7.0"
futures = "0.3.30"
mongodb = "3.1.0"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
strsim = "0.11.1"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
